[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/level.gd" type="Script" id=1]
[ext_resource path="res://Fonts/Poppins-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/shape_button.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/grid.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sprites/reset_button.png" type="Texture" id=5]
[ext_resource path="res://Sprites/submit_btn.png" type="Texture" id=6]
[ext_resource path="res://Sprites/back_button.png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="level" type="Node2D"]
script = ExtResource( 1 )

[node name="grid" parent="." instance=ExtResource( 4 )]
z_index = 100
z_as_relative = false

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = -165.0
margin_top = 813.0
margin_right = 163.0
margin_bottom = 922.0
texture_normal = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="square" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 664 )
shape_id = 2
shape_type = "outline"
shape_instance_limit = 3

[node name="triangle" parent="." instance=ExtResource( 3 )]
position = Vector2( -184, 656 )
shape_id = 3
shape_type = "outline"
shape_instance_limit = 3

[node name="circle" parent="." instance=ExtResource( 3 )]
position = Vector2( 184, 656 )
shape_id = 4
shape_type = "outline"
shape_instance_limit = 3

[node name="red" parent="." instance=ExtResource( 3 )]
position = Vector2( 184, 472 )
shape_id = 5
shape_type = "color"
shape_instance_limit = 3

[node name="green" parent="." instance=ExtResource( 3 )]
position = Vector2( -176, 472 )
shape_id = 6
shape_type = "color"
shape_instance_limit = 3

[node name="blue" parent="." instance=ExtResource( 3 )]
position = Vector2( -1.00061, 472 )
shape_id = 7
shape_type = "color"
shape_instance_limit = 3

[node name="Label" type="Label" parent="."]
margin_left = -229.0
margin_top = 287.0
margin_right = 231.0
margin_bottom = 409.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="reset_button" type="TextureButton" parent="."]
anchor_right = 10.0
margin_left = 1080.0
margin_top = 1920.0
margin_right = 1180.0
margin_bottom = 2020.0
texture_normal = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="back_button" type="TextureButton" parent="."]
margin_left = 392.0
margin_top = -56.0
margin_right = 492.0
margin_bottom = 44.0
texture_normal = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="colortween" type="Tween" parent="."]

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="reset_button" to="." method="_on_reset_button_pressed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
